[package]
name = "rustgenpass"
authors = ["Olle Wreede <olle@wreede.se>"]
description = "Generate a hashed password similar to SuperGenPass."
version = "0.2.0"
edition = "2021"

[dependencies]
base64 = "0.13"
clap = { version = "3.2", features = ["derive"] }
lazy_static = "1.4"
md-5 = "0.10"
regex = "1.6"
rpassword = "7.0.0"
sha2 = "0.10"

[[bin]]
name = "rgp"
path = "src/main.rs"
