[package]
name = "rustgenpass"
authors = ["Olle Wreede <olle@wreede.se>"]
description = "Generate a hashed password similar to SuperGenPass."
version = "0.5.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/ollej/rustgenpass"
repository = "https://github.com/ollej/rustgenpass"
readme = "README.md"
keywords = ["password", "security", "hash", "supergenpass", "cli"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.13.1"
clap = { version = "4.0.18", features = ["derive"] }
dialoguer = "0.10.2"
lazy_static = "1.4.0"
md-5 = "0.10.5"
regex = "1.6.0"
sha2 = "0.10.6"

[lib]
name = "rustgenpass"
path = "src/lib.rs"

[[bin]]
name = "rgp"
path = "src/main.rs"

[profile.dev]
debug = 1 # less precise locations

# Doesn't work with android build
[profile.dev.package.'*']
debug = false # no debug symbols for deps
opt-level = 2

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
codegen-units = 1
strip = true  # Automatically strip symbols from the binary.
